--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ a {
     color: #fff;
     text-decoration: none;
 }
+a:link {
+    color: #fff;
+    text-decoration: none;
+}
 header {
     top: 0;
     left: 0;
@@ -121,7 +125,11 @@ header {
 }
 .socials-container {
     display: flex;
+    flex-direction: row;
     gap: 10px;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
 }
 .socials-container a {
     filter: invert(79%) sepia(16%) saturate(20%) hue-rotate(345deg) brightness(81%) contrast(96%);
@@ -129,6 +137,15 @@ header {
 .socials-container img {
     width: 20px;
     height: 20px;
+}
+.socials-container span {
+    margin-left: auto;
+}
+.socials-container p {
+    font-size: 12px;
+    color: #a5a5a5;
+    font-style: italic;
+    margin: 0px 0px 0px 0px;
 }
 .socials-container img:hover {
     filter: invert(36%) sepia(0%) saturate(2460%) hue-rotate(5deg) brightness(86%) contrast(70%);
@@ -161,6 +178,7 @@ header {
     color: #fff;
     margin-left: 20px;
     text-align: justify;
+    line-height: 1.5;
 }
 
 /* EXPERIENCES */
@@ -202,7 +220,7 @@ header {
 }
 .line {
     width: 2px;
-    height: 115px;
+    height: 153px;
     background: white
 }
 .line2 {
@@ -230,6 +248,8 @@ header {
     font-weight: 300;
     color: #fff;
     margin-bottom: 40px;
+    text-align: justify;
+    line-height: 1.5;
 }
 
 /* PROJECTS */
@@ -283,7 +303,7 @@ header {
     justify-content: center;
     align-items: start;
     margin: 0px 330px;
-    padding: 20px 30px;
+    padding: 0px 30px 0px 30px;
     color: #fff;
     background-color: #141414;
 }
@@ -291,31 +311,121 @@ header {
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 15px;
+    margin-top: 15px;
 }
 .project-items {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     margin: 10px 0px;
-    border: 1px solid #e2e2e2;
 }
 .project-pic{
+    background-color: #393939;
     display: flex;
     flex-direction: column;
-    gap: 20px;
     align-items: center;
     text-align: center;
-    padding: 20px;
-    width: 40%;
-    border: 1px solid #ff4040;
+    justify-content: end;
+    width: 275px;
+    height: 220px;
+    border-radius: 15px;
 }
 .project-info {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: start;
+    align-items: start;
+    padding: 10px;
     text-align: center;
-    border: 1px solid #ff4040;
+    border-radius: 0px 0px 15px 15px;
+    width: 100%;
+    height: 60px;
+    background-color: #2e2e2e;
+}
+.project-info h3 {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.project-info span {
+    white-space: nowrap; 
+    width: 100%; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 12px;
+    font-weight: 300;
+    color: #a5a5a5;
+    text-align: start;
+}
+
+/* CONTACT */
+.contact-me {
+    background-color: #141414;
+    padding-top: 20px;
+}
+.contact-me-container {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin: 0px 330px;
+    padding: 20px 30px;
+    color: #fff;
+    background-color: #141414;
+}
+.contact-me-container h2 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.contact-info {
+    width: 100%;
+    align-items: start;
+    margin: 0px 0px 0px 20px;
+    padding: 0px 0px;
+}
+.contact-info p {
+    font-size: 15px;
+    color: #fff;
+    margin: 0px 0px 5px 0px;
+    padding: 0px 0px;
+}
+.contact-socials {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 20px;
+    gap: 50px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.contact-socials a {
+    filter: invert(79%) sepia(16%) saturate(20%) hue-rotate(345deg) brightness(81%) contrast(96%);
+}
+.contact-socials img {
+    width: 40px;
+    height: 40px;
+}
+.contact-socials img:hover {
+    filter: invert(36%) sepia(0%) saturate(2460%) hue-rotate(5deg) brightness(86%) contrast(70%);
+}
+
+/* FOOTER */
+footer {
+    font-family: 'poppins', sans-serif;
+    background-color: #141414;
+    padding: 20px 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+}
+footer h5 {
+    font-size: 12px;
+    font-weight: 300;
 }
 
 
